# portfolio

./: .gitignore  .pre-commit-config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
backend/: manage.py  pyproject.toml
backend/core/: urls.py  views.py
backend/portfolio/: urls.py  wsgi.py
backend/portfolio/settings/: base.py  local.py  production.py  staging.py
portpolio/portpolio/: asgi.py  settings.py  urls.py  wsgi.py
